--- a/project/package.json
+++ b/project/package.json
@@ -14,10 +14,13 @@
     "@heroicons/react": "^2.2.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.3",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.6.3"
+    "react-router-dom": "^7.6.3",
+    "react-spring": "^10.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
