--- a/project/backend/package.json
+++ b/project/backend/package.json
@@ -10,16 +10,23 @@
     "test": "node test.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "body-parser": "^1.20.2",
     "axios": "^1.6.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
+    "crypto": "^1.0.1",
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2",
+    "nodemailer": "^7.0.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
   },
-  "keywords": ["chatbot", "gemini", "api", "skillswap"],
+  "keywords": [
+    "chatbot",
+    "gemini",
+    "api",
+    "skillswap"
+  ],
   "author": "SkillSwap Team",
   "license": "MIT"
-} 
+}
